log/build_2025-03-03_16-59-19/me495_yolo/stdout_stderr.log
running egg_info
writing ../../build/me495_yolo/me495_yolo.egg-info/PKG-INFO
writing dependency_links to ../../build/me495_yolo/me495_yolo.egg-info/dependency_links.txt
writing entry points to ../../build/me495_yolo/me495_yolo.egg-info/entry_points.txt
writing top-level names to ../../build/me495_yolo/me495_yolo.egg-info/top_level.txt
reading manifest file '../../build/me495_yolo/me495_yolo.egg-info/SOURCES.txt'
writing manifest file '../../build/me495_yolo/me495_yolo.egg-info/SOURCES.txt'
running build
running build_py
copying me495_yolo/waypoint_april.py -> /home/catherine-maglione/yolo_backup/build/me495_yolo/build/lib/me495_yolo
running install
running install_lib
copying /home/catherine-maglione/yolo_backup/build/me495_yolo/build/lib/me495_yolo/waypoint_april.py -> /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo
byte-compiling /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/waypoint_april.py to waypoint_april.cpython-312.pyc
byte-compiling /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/square_mover.py to square_mover.cpython-312.pyc
running install_data
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/square_mover.py", line 142
    waypoints_world = [
                      ^
SyntaxError: '[' was never closed

running install_egg_info
removing '/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/me495_yolo/me495_yolo.egg-info to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo-0.0.0-py3.12.egg-info
running install_scripts
Installing apriltag_detector script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing good_square script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing rotate_to_90 script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing square_motion script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing square_mover script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing waypoint script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing waypoint_april script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing waypoint_follower script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
Installing yolo script to /home/catherine-maglione/yolo_backup/install/me495_yolo/lib/me495_yolo
writing list of installed files to '/home/catherine-maglione/yolo_backup/build/me495_yolo/install.log'
